--- a/ec/src/components/Wireframe/FollowText/FollowText.module.css
+++ b/ec/src/components/Wireframe/FollowText/FollowText.module.css
@@ -6,7 +6,7 @@
   height: 160px;
   align-items: flex-start;
 }
-.theLargestCommunityOfPhotoEnth {
+.followText {
   color: #000;
   font-size: 56px;
   line-height: 80px;
