--- a/ec/src/components/Wireframe/Wireframe.module.css
+++ b/ec/src/components/Wireframe/Wireframe.module.css
@@ -11,7 +11,7 @@
   width: 826px;
   height: 145px;
 }
-.theLargestCommunityOfPhotoEnth {
+.followText {
   color: #1c1a1a;
   font-size: 56px;
   line-height: 80px;
