--- a/src/components/Wireframe/CalendarBlock/CalendarBlock.module.css
+++ b/src/components/Wireframe/CalendarBlock/CalendarBlock.module.css
@@ -68,7 +68,7 @@
   align-items: flex-start;
   overflow: hidden;
 }
-.unnamed3 {
+.navigation {
   color: #000;
   font-size: 16px;
   line-height: 100%;
@@ -301,7 +301,7 @@
   width: 100%;
   height: 100%;
 }
-.unnamed8 {
+.logoText {
   color: #000;
   font-size: 14px;
   line-height: 120%;
