--- a/src/components/Wireframe/StartBlock/StartBlock.module.css
+++ b/src/components/Wireframe/StartBlock/StartBlock.module.css
@@ -1,61 +1,46 @@
 .root {
-  position: absolute;
-  left: 0;
-  top: 29px;
-  width: 1680px;
-  height: 942px;
+  position: relative;
+  width: 100%;
+  height: 960px;
   align-items: flex-start;
-  background-color: #fff;
   overflow: hidden;
 }
+
 .ellipse {
-  position: absolute;
-  left: -357px;
-  top: 140px;
-  width: 627px;
-  height: 627px;
-  overflow: visible;
-}
-.icon {
-  width: 100%;
-  height: 100%;
-}
-.ellipse2 {
-  position: absolute;
-  left: 1355px;
-  top: 50px;
-  width: 648px;
+  position: relative;
+  left: -18%;
+  top: 110px;
+  width: 39%;
   height: 648px;
   overflow: visible;
 }
-.icon2 {
-  width: 100%;
-  height: 100%;
-}
-.frame {
+
+.ellipse2 {
   position: absolute;
-  left: 135px;
-  top: 32px;
-  width: 100.0367px;
-  height: 18px;
-  overflow: hidden;
+  left: 82%;
+  top: 110px;
+  width: 39%;
+  height: 648px;
+  overflow: visible;
 }
-.imageRemovebgPreview11 {
+
+.imageLovePlanet {
   position: absolute;
-  left: 1279px;
+  left: 76%;
   top: 273px;
-  width: 259px;
+  width: 15%;
   height: 425px;
   background-image:/* webpackIgnore: true */ url('/assets/imageRemovebgPreview11.jpg');
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
 }
-.imageRemovebgPreview61 {
+
+.imageZeroWaste {
   position: absolute;
-  left: 67px;
+  left: 7%;
   top: 329px;
-  width: 358px;
+  width: 21%;
   height: 453px;
   background-image:/* webpackIgnore: true */ url('/assets/imageRemovebgPreview61.jpg');
   background-position: center;
