--- a/src/components/Wireframe/Wireframe.module.css
+++ b/src/components/Wireframe/Wireframe.module.css
@@ -1,57 +1,3 @@
-.ellipse.ellipse {
-  left: 914px;
-  top: 273px;
-  width: 44px;
-  height: 44px;
-  transform: initial;
-}
-.theLargestCommunityOfPhotoEnth2.theLargestCommunityOfPhotoEnth2 {
-  left: 404px;
-  top: 248px;
-  width: 826px;
-  height: 145px;
-}
-.followText {
-  color: #1c1a1a;
-  font-size: 56px;
-  line-height: 80px;
-  font-family: Montserrat, system-ui, -apple-system, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, 'Noto Sans',
-    'Liberation Sans', sans-serif;
-  letter-spacing: -0.015em;
-  position: absolute;
-  left: 0;
-  right: 0;
-  top: 0;
-  bottom: 0;
-  text-align: center;
-  align-items: center;
-  flex-direction: column;
-}
-.button.button {
-  left: 721px;
-  top: 615px;
-  width: 192px;
-  height: 52px;
-}
-.joinToday {
-  color: #fff;
-  font-size: 17px;
-  font-weight: 500;
-  font-family: Montserrat, system-ui, -apple-system, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, 'Noto Sans',
-    'Liberation Sans', sans-serif;
-  letter-spacing: -0.015em;
-  position: absolute;
-  left: 10.5288%;
-  right: 11.3462%;
-  top: 29.4231%;
-  bottom: 30.1923%;
-  width: min-content;
-  height: min-content;
-  text-align: center;
-  align-items: center;
-  white-space: nowrap;
-  flex-direction: column;
-}
 .sampleLogo.sampleLogo {
   left: 0;
   top: 13px;
@@ -73,14 +19,7 @@
   justify-content: center;
   flex-direction: column;
 }
-.root {
-  position: relative;
-  width: 1680px;
-  height: 3325px;
-  align-items: flex-start;
-  background-color: #fff;
-  overflow: hidden;
-}
+
 .footerC {
   position: absolute;
   left: 57px;
@@ -131,7 +70,7 @@
   background-repeat: no-repeat;
   background-size: cover;
 }
-.frame601 {
+.logoFooter {
   position: absolute;
   left: 686px;
   top: 187px;
@@ -154,18 +93,6 @@
   align-items: center;
   justify-content: center;
   flex-direction: column;
-}
-.logo {
-  position: absolute;
-  left: 50.6311px;
-  top: 0;
-  width: 64px;
-  height: 55px;
-  border-radius: 178px;
-  background-image:/* webpackIgnore: true */ url('/assets/logo.jpg');
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: cover;
 }
 .unnamed2 {
   color: #000;
@@ -251,145 +178,91 @@
   filter: blur(2px);
   transform: matrix(-0.4226, 0.9063, -0.9063, -0.4226, 0, 0);
 }
-.heroE {
-  position: absolute;
-  left: 0;
-  top: 52px;
-  width: 1680px;
+
+.root {
+  position: relative;
+  width: 100%;
+  height: 3325px;
+  align-items: flex-start;
+  background-color: #fff;
+  overflow: hidden;
+  flex-direction: column;
+}
+
+.navigationHeader {
+  width: 100%;
+  height: 2%;
+  overflow: hidden;
+}
+
+.logoFrame {
+  align-items: flex-start;
+  justify-content: flex-start;
+  padding-left: 5px;
+  padding-right: 5px;
+  margin-left: 5px;
+}
+
+.logo {
+  width: 45px;
+  height: 45px;
+  border-radius: 178px;
+  background-image:/* webpackIgnore: true */ url('/assets/logo.jpg');
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
+.logoText {
+  color: #000;
+  font-size: 32px;
+  font-family: Comfortaa, system-ui, -apple-system, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, 'Noto Sans',
+    'Liberation Sans', sans-serif;
+  letter-spacing: -0.015em;
+  text-align: center;
+  align-items: center;
+  justify-content: center;
+  text-shadow: 0 4px 4px #00000040;
+  flex-direction: column;
+}
+
+.followBlock {
+  position: relative;
+  width: 100%;
   height: 960px;
   align-items: flex-start;
   background-color: #fff;
   overflow: hidden;
 }
-.navigationD {
-  position: absolute;
-  left: 0;
-  top: 0;
-  width: 1680px;
-  height: 82px;
-  align-items: flex-start;
-  background-color: #fff;
-  overflow: hidden;
+
+.ellipse.ellipse {
+  left: 914px;
+  top: 273px;
+  width: 44px;
+  height: 44px;
+  transform: initial;
 }
-.unnamed3 {
-  color: #009d00;
-  font-size: 15px;
-  font-weight: 500;
+
+.followText {
+  left: 25%;
+  top: 110px;
+  width: 50%;
+  height: 145px;
+  color: #475447;
+  font-size: 56px;
+  line-height: 80px;
   font-family: Montserrat, system-ui, -apple-system, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, 'Noto Sans',
-    'Liberation Sans', sans-serif;
+  'Liberation Sans', sans-serif;
   letter-spacing: -0.015em;
   position: absolute;
-  left: 1029px;
-  top: 36px;
-  width: min-content;
-  height: min-content;
   text-align: center;
   align-items: center;
-  white-space: nowrap;
   flex-direction: column;
 }
-.unnamed4 {
-  color: #009d00;
-  font-size: 15px;
-  font-weight: 500;
-  font-family: Montserrat, system-ui, -apple-system, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, 'Noto Sans',
-    'Liberation Sans', sans-serif;
-  letter-spacing: -0.015em;
-  position: absolute;
-  left: 1110px;
-  top: 36px;
-  width: min-content;
-  height: min-content;
-  text-align: center;
-  align-items: center;
-  white-space: nowrap;
-  flex-direction: column;
-}
-.unnamed5 {
-  color: #009d00;
-  font-size: 15px;
-  font-weight: 500;
-  font-family: Montserrat, system-ui, -apple-system, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, 'Noto Sans',
-    'Liberation Sans', sans-serif;
-  letter-spacing: -0.015em;
-  position: absolute;
-  left: 1213px;
-  top: 32px;
-  width: min-content;
-  height: min-content;
-  text-align: center;
-  align-items: center;
-  white-space: nowrap;
-  flex-direction: column;
-}
-.unnamed6 {
-  color: #009d00;
-  font-size: 15px;
-  font-weight: 500;
-  font-family: Montserrat, system-ui, -apple-system, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, 'Noto Sans',
-    'Liberation Sans', sans-serif;
-  letter-spacing: -0.015em;
-  position: absolute;
-  left: 1359px;
-  top: 33px;
-  width: min-content;
-  height: min-content;
-  text-align: center;
-  align-items: center;
-  white-space: nowrap;
-  flex-direction: column;
-}
-.unnamed7 {
-  color: #009d00;
-  font-size: 15px;
-  font-weight: 500;
-  font-family: Montserrat, system-ui, -apple-system, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, 'Noto Sans',
-    'Liberation Sans', sans-serif;
-  letter-spacing: -0.015em;
-  position: absolute;
-  left: 1569px;
-  top: 33px;
-  width: min-content;
-  height: min-content;
-  text-align: center;
-  align-items: center;
-  white-space: nowrap;
-  flex-direction: column;
-}
-.frame602 {
-  position: absolute;
-  left: -12px;
-  top: 13px;
-  width: 262px;
-  height: 55px;
-  align-items: flex-start;
-}
-.logo2 {
-  position: absolute;
-  left: 74px;
-  top: 0;
-  width: 64px;
-  height: 55px;
-  border-radius: 178px;
-  background-image:/* webpackIgnore: true */ url('/assets/logo2.jpg');
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: cover;
-}
-.unnamed8 {
-  color: #000;
-  font-size: 28.4444px;
-  font-family: Comfortaa, system-ui, -apple-system, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, 'Noto Sans',
-    'Liberation Sans', sans-serif;
-  letter-spacing: -0.015em;
-  position: absolute;
-  left: 45.8015%;
-  right: 0;
-  top: 23.6364%;
-  bottom: 18.1818%;
-  text-align: center;
-  align-items: center;
-  justify-content: center;
-  text-shadow: 0px 4px 4px #00000040;
-  flex-direction: column;
+
+.button.button {
+  left: 44%;
+  top: 430px;
+  width: 25%;
+  height: 52px;
 }
